# UniqueWordsCounter

./: .gitignore  CMakeLists.txt  LICENSE  MMapFile.cpp  MMapFile.hpp  README.md  WordCounter.hpp  main.cpp
test_inputs/: input2.txt
tests/: test_wordcounter.cpp
